@@ -1,3 +1,7 @@
+2005-01-11  Carlos Garnacho Parro  <carlosg@gnome.org>
+
+	* shares-conf.in: added SMB general config to the XML
+
 2005-01-10  Carlos Garnacho Parro  <carlosg@gnome.org>
 
 	* network.pl.in: s/login/user/ in debian ppp config files, it seems
